--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Animated Gradient</title>
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(90deg, oklch(0.656 0.241 354.308), oklch(0.718 0.202 349.761), oklch(0.705 0.213 47.604));
-      background-size: 300%;
-      animation: gradient 6s infinite linear;
-    }
-
-    @keyframes gradient {
-      0% {
-        background-position: 0% 0%;
-      }
-      50%{
-        background-position: 100% 100%;
-      }
-      100% {
-        background-position: 0% 0%;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Var vs Let vs Const</title>
 </head>
 <body>
+    <h1>Abre la consola para ver la diferencia entre var, let y const</h1>
+    <script>
+        function testScope() {
+            console.log("🔹 var:");
+            if (true) {
+                var theVar = 10;
+            }
+            console.log(theVar); // ✅ var tiene alcance de función
+
+            console.log("🔹 let:");
+            if (true) {
+                let theLet = 20;
+            }
+            //console.log(theLet); // ❌ Error: let tiene alcance de bloque
+
+            console.log("🔹 const:");
+            const theConst = 30;
+            //theConst = 40; // ❌ Error: const no permite reasignación
+
+            console.log("🔹 const y objetos:");
+            const obj = { value: 50 };
+            obj.value = 60; // ✅ const permite modificar propiedades de objetos
+            console.log(obj.value);
+        }
+
+        testScope();
+    </script>
 </body>
 </html>
-
